2008-05-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/remote_control_widget.cpp:
	hotfix for Qt >= 4.4.0 where toolbar didn't appear anymore

	* ima/src/client.cpp:
	fixed tray-menu-actions when main-window is minimized

	* lib/src/isd_connection.cpp:
	increased timeout again

2008-05-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/ru.qm:
	* ica/resources/ru.ts:
	* setup/setup.qrc:
	* setup/resources/ru.ts:
	* setup/resources/ru.qm:
	* ima/italc.qrc:
	* ima/resources/ru.ts:
	* ima/resources/ru.qm:
	* lib/italc_core.qrc:
	* lib/resources/ru.ts:
	* lib/resources/ru.qm:
	added Russian localization-files by Alexander Kazancev

	* ima/resources/uk.ts:
	* ima/resources/uk.qm:
	updated Ukrainian localization-files by Yuri Chornoivan

2008-05-06	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/main.cpp:
	disabled stylesheet with Qt < 4.3

	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	updated Finnish localization

2008-05-05	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.qm:
	* ima/resources/it.ts:
	* setup/resources/it.qm:
	* setup/resources/it.ts:
	Updated Italian localization

2008-05-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* build_mingw32:
	build with -fno-strict-aliasing as compiling with MinGW-GCC < 4.3.0
	can lead to miscompilations without this flag

	* ima/src/main_window.cpp:
	added exit()-call in main-window-destructor when building for win32 -
	hack which fixes bug

	* lib/src/isd_connection.cpp:
	increased timeout when reading from socket

	* ima/src/client.cpp:
	changed color of active titlebar

	* ica/src/isd_server.cpp:
	* ima/italc.qrc:
	* ima/src/tool_button.h:
	* ima/src/main_window.h:
	* ima/src/main.cpp:
	* ima/src/classroom_manager.h:
	* ima/src/tool_button.cpp:
	* ima/src/main_window.cpp:
	* ima/src/classroom_manager.cpp:
	* ima/resources/tray-menu-bg.png:
	* lib/include/isd_connection.h:
	* lib/include/isd_base.h: