@@ -1,5 +1,16 @@
 2008-05-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/resources/sk.qm:
+	* ica/resources/sk.ts:
+	* setup/resources/sk.ts:
+	* setup/resources/sk.qm:
+	* ima/resources/sk.ts:
+	* ima/resources/sk.qm:
+	* lib/resources/sk.ts:
+	* lib/resources/sk.qm:
+	updated Slovakian localization-files by Jan Valuska
+	<jvaluska/at/gymzv8rocne/dot/edu/dot/sk>
+
 	* ima/src/remote_control_widget.cpp:
 	hotfix for Qt >= 4.4.0 where toolbar didn't appear anymore
 
